# lambda-calculus

./: .gitignore  .travis.yml  LICENSE  README.md  lambda-calculator.cabal  lambda-calculus.cabal  package.yaml  stack.yaml
app/: Main.hs
doc/: README.md  lambda-calculus.md  system-f.md
src/Language/: Lambda.hs  SystemF.hs
src/Language/Lambda/: Eval.hs  Expression.hs  Parser.hs  PrettyPrint.hs
src/Language/Lambda/Util/: Eval.hs  PrettyPrint.hs
src/Language/SystemF/: Expression.hs  Parser.hs  TypeCheck.hs
test/: HLint.hs
test/Data/String/: StripSpec.hs
test/Language/: LambdaSpec.hs  SystemFSpec.hs
test/Language/Lambda/: EvalSpec.hs  ExpressionSpec.hs  HspecUtils.hs  ParserSpec.hs  PrettyPrintSpec.hs
test/Language/Lambda/Examples/: BoolSpec.hs  NatSpec.hs  PairSpec.hs
test/Language/Lambda/Util/: PrettyPrintSpec.hs
test/Language/SystemF/: ExpressionSpec.hs  ParserSpec.hs  TypeCheckSpec.hs
