name:                lambda-calculator
version:             1.1.0
synopsis:            A lambda calculus interpreter
description:         Please see README.md
homepage:            https://github.com/sgillespie/lambda-calculus#readme
license:             MIT
license-file:        LICENSE
author:              Sean D Gillespie
maintainer:          sean@mistersg.net
copyright:           2016 Sean Gillespie
category:            LambdaCalculus,Language,Teaching
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Lambda,
                       Language.Lambda.Expression,
                       Language.Lambda.Eval,
                       Language.Lambda.Parser,

                       Language.Lambda.Util.PrettyPrint,

                       Language.SystemF,
                       Language.SystemF.Expression,
                       Language.SystemF.Parser
  build-depends:       base <= 5,
                       parsec
  default-language:    Haskell2010

executable lambda-calculator
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_lambda_calculator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       lambda-calculator,
                       optparse-applicative,
                       Shellac,
                       Shellac-readline
  default-language:    Haskell2010

test-suite lambda-calculus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.LambdaSpec,
                       Language.Lambda.Examples.BoolSpec,
                       Language.Lambda.Examples.NatSpec,
                       Language.Lambda.Examples.PairSpec,
                       Language.Lambda.ExpressionSpec,
                       Language.Lambda.EvalSpec,
                       Language.Lambda.HspecUtils,
                       Language.Lambda.ParserSpec,

                       Language.Lambda.Util.PrettyPrintSpec,

                       Language.SystemFSpec,
                       Language.SystemF.ExpressionSpec,
                       Language.SystemF.ParserSpec
  build-depends:       base <= 5,
                       lambda-calculator,
                       hspec,
                       HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lambda-calculus-lint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base <= 5,
                       hlint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgillespie/lambda-calculus
