name:                lambda-calculus
version:             0.2.0
synopsis:            A lambda calculus interpreter
description:         Please see README.md
homepage:            https://github.com/githubuser/lambda-calculus#readme
license:             MIT
license-file:        LICENSE
author:              Sean D Gillespie
maintainer:          sean@mistersg.net
copyright:           2016 Sean Gillespie
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Lambda,
                       Language.Lambda.Expression,
                       Language.Lambda.Eval,
                       Language.Lambda.Parser,
                       Language.Lambda.PrettyPrint
  build-depends:       base >= 4.7 && < 5,
                       parsec
  default-language:    Haskell2010

executable lambda-calculus
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_lambda_calculus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       lambda-calculus,
                       Shellac,
                       Shellac-readline
  default-language:    Haskell2010

test-suite lambda-calculus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.LambdaSpec,
                       Language.Lambda.Examples.BoolSpec,
                       Language.Lambda.Examples.NatSpec,
                       Language.Lambda.ExpressionSpec,
                       Language.Lambda.EvalSpec,
                       Language.Lambda.HspecUtils,
                       Language.Lambda.ParserSpec,
                       Language.Lambda.PrettyPrintSpec
  build-depends:       base,
                       lambda-calculus,
                       hspec,
                       HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambda-calculus
